assets/css/style.css
*, *:before, *:after {
    box-sizing: border-box;
}

body {
    background: #fff;
    color: #2f2f2f;
    font-size: 16px;
    overflow: hidden;
    height: 100vh;
}

.btn, button {
    background: rgba(0, 0, 0, 0.7);
    border: 1px solid white;
    border-radius: 4px;
    color: white;
    font-size: 1em;
    height: 40px;
    line-height: 40px;
    margin: 0;
    text-align: center;
    width: 100px;
    z-index: 99;
}

.btn:focus, button:focus {
    outline-color: transparent;
}

.btn:hover, button:hover {
    box-shadow: 0 0 14px white;
}

.btn.random, .btn.twit {
    position: absolute;
    right: 40px;
}

.btn.random {
    top: 40px;
}

.btn.twit {
    top: 90px;
}

main {
    background: #000;
    border-radius: 4px;
    color: #fff;
    display: flex;
    height: calc(100vh - 60px);
    margin: 20px 20px 0 20px;
    overflow: hidden;
    width: calc(100vw - 40px);
}

.quote-container, .photo {
    flex: 1;
    height: 100%;
}

.quote-container {
    margin-left: 20px;
    z-index: 1;
}

.quote-with-name {
    background-color: rgba(39, 40, 34, 0.8);
    font-size: 1.2em;
    max-height: calc(100vh - 100px);
    overflow: auto;
    padding: 20px;
}

.quote-with-name p, .quote-with-name q{
    margin: 0;
}

q:before,q:after {
    content: '';
}

.quote-with-name .name{
    margin-top: 20px;
    text-align: right;
}

.photo {
    background: #000;
    background-size: auto calc(100%);
    background-repeat: no-repeat;
    background-position: center;
    z-index: 0;
}

footer {
    font-size: .9em;
    height: 40px;
    line-height: 40px;
    margin: 0;
    text-align: center;
}

footer button {
    background: #fff;
    border-color: #2f2f2f;;
    color: #2f2f2f;;
    height: 25px;
    line-height: 20px;
    width: auto;
}

footer p {
    margin: 0;
}

.Aligner {
    align-items: center;
    display: flex;
    justify-content: center;
    min-height: calc(100vh - 60px);
}

.Aligner-item {
    flex: 1;
    margin: 0;
    text-align: center;
}

.Aligner-item--top {
    align-self: flex-start;
    margin: 0;
    max-width: 0;
}

.Aligner-item--bottom {
    align-self: flex-end;
    margin: 0;
    max-width: 0;
}

.Aligner-item--fixed {
    flex: none;
    margin: 0;
    max-width: 50%;
}




@media screen and (orientation:portrait) {

    main {
        display: block;
        position: relative;
    }

    .quote-container {
        display: block;
        height: auto;
        margin: 20px;
        min-height: 0;
        position: relative;
    }

    .photo {
        width: 100%;

        position: absolute;
        bottom: 0;
        left: 0;
    }

    .btn.twit, .btn.random {
        bottom: 20px;
        top: auto;
    }

    .btn.twit {
        left: 20px;
    }

    .btn.random {
        right: 20px;
    }
}

.spinner-container {
    color: #fff;
    background: #000;
    opacity: 1;
    border-radius: 4px;

    position: fixed;
    top: 0;
    left: 0;

    z-index: 999;
    display: flex;
    align-items: center;
    justify-content: center;

    height: calc(100vh - 60px);
    width: calc(100vw - 40px);
    margin: 20px 20px 0 20px;
}

.loader {
    border: 16px solid #f3f3f3;
    border-top: 16px solid #3498db;
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
}

.loading-text {
    animation: spintext  2s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

@keyframes spintext {
    0% { transform: rotate(45deg); }
    70% { transform: rotate(120deg); }
    100% { transform: rotate(360deg); }
}

.more-info {
    background: #dddddd;
    height: 100vh;
    overflow: auto;
    padding: 20px;
    width: 100vw;
    z-index: 999;

    position: absolute;
    top: 100vh;
    left: 0;
}

.more-info .container{
    margin: 0 auto;
    max-width: 400px;
}

.close-btn {
    margin: 20px 0 0 0;
    width: 100%;
}

form input, form .btn, form textarea{
    width: 100%;
}

